cluster-apps/baremetal/automarkwatched/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automarkwatched
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automarkwatched
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: automarkwatched
    spec:
      nodeSelector:
        cajun.pro/cluster-gen: "2"
      restartPolicy: Always
      containers:
      - name: automarkwatched
        image: itscontained/automarkwatched:0.1.3
        ports:
          - name: ui
            containerPort: 8000
#        livenessProbe:
#          initialDelaySeconds: 180
#          periodSeconds: 10
#          timeoutSeconds: 1
#          failureThreshold: 3
#          httpGet:
#            path: /
#            port: ui
        volumeMounts:
          - mountPath: /app/data
            name: data
      volumes:
        - name: data
          nfs:
            server: 10.0.10.211
            path: /mnt/nfs/automarkwatched/data
