cluster-apps/baremetal/automarkwatched/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: automarkwatched
  name: automarkwatched
spec:
  rules:
    - host: amw.cajun.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: automarkwatched
                port:
                  number: 8000
  tls:
    - secretName: amw-cajun-pro
      hosts: [amw.cajun.pro]
